<resources>
    <string name="app_name">Health_MVP</string>

    <string name="title_home">首页</string>
    <string name="title_forum">论坛</string>
    <string name="title_myself">我的</string>
    <string name="title_setting">设置</string>

    <!--login and register-->
    <string name="phone_number">手机号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register_question">没有账号？立即注册</string>
    <string name="login_question">已有账号？立即登录</string>
    <string name="remember_me">下次自动补全手机号和密码</string>
    <string name="required">不能为空</string>
    <string name="empty_phone_number">手机号不能为空</string>
    <string name="empty_pwd">密码不能为空</string>
    <string name="error_phone_number">手机号未注册</string>
    <string name="error_pwd">密码错误，请检查</string>
    <string name="login_success">登录成功</string>
    <string name="re_password">确认密码</string>
    <string name="re_password_not_same">确认密码不一致</string>
    <string name="register">注册</string>
    <string name="error_network">无网络连接</string>
    <string name="empty_re_pwd">确认密码不能为空</string>
    <string name="register_success">注册成功</string>
    <string name="i_am_doctor">我是医生</string>
    <string name="identity_code">六位身份验证码</string>
    <string name="phone_format_error">手机号格式错误</string>
    <string name="pwd_format_error">密码至少六位</string>
    <string name="re_pwd_error">确认密码不一致</string>
    <string name="phone_registered_error">该号码已注册</string>
    <string name="empty_code">医生注册必须填写身份验证码</string>
    <string name="format_error">格式错误</string>
    <string name="code_format_error">身份验证码格式错误，请检查</string>
    <string name="login_error_help">请检查手机号和密码是否正确</string>

    <!--find bluetooth -->
    <string name="machine_id_hint">请输入设备ID</string>
    <string name="user_verification">用户认证</string>
    <string name="verify">认证</string>
    <string name="bt_not_support">设备不支持蓝牙功能</string>
    <string name="ble_not_support">设备不支持低功耗蓝牙</string>
    <string name="open_locating_info">低功耗蓝牙在 Android 6.0 及以上的系统中需要手机定位功能，请打开手机定位再搜索</string>
    <string name="none_device">没有找到可连接设备</string>
    <string name="search">搜索</string>
    <string name="searching">搜索中....</string>
    <string name="open_bluetooth_info">请打开手机蓝牙</string>
    <string name="bt_device_wrong">不支持所选蓝牙设备</string>
    <string name="unknown_device">未知设备</string>
    <string name="searched">搜索完成</string>
    <string name="upto_bind_number_limit">设备绑定用户数量达到限制</string>
    <string name="input_mid_error">输入的设备ID错误</string>
    <string name="device_connected">设备已连接</string>
    <string name="device_disconnected">设备断开连接</string>
    <string name="reconnect">重新连接</string>
    <string name="empty_data">指令为空</string>
    <string name="mid_length_error">设备ID长度为8</string>
    <string name="title_message">消息</string>
    <string name="no_patient_bind">你没有绑定的病人</string>
    <string name="all_statistic">全部</string>
    <string name="week_barchart_title">本周统计</string>
    <string name="start_realtime">显示实时数据</string>
    <string name="realtime_linechart">实时数据图</string>
    <string name="patient_card_title">患者资料卡</string>
    <!--username | gender | age-->
    <string name="patient_base_info">%1$s | %2$s | %3$s</string>
    <string name="by_day">按天</string>
    <string name="by_week">按周</string>
    <string name="by_month">按月</string>
    <string name="by_year">按年</string>
    <string name="statistic_title">数据统计</string>
    <string name="user_name">姓名</string>
    <string name="gender">性别</string>
    <string name="age">年龄</string>
    <string name="email">邮箱</string>
    <string name="machine_id">设备ID</string>
    <string name="no_post">没有帖子</string>
    <string name="comment">评论</string>
    <string name="no_comment">没有评论</string>
    <string name="change_password">修改密码</string>
    <string name="no_message">没有消息</string>
    <string name="fix_criterion">定标</string>
    <string name="set_show_channel">设置显示通道数</string>
    <string name="channel_number">显示的通道数量</string>
    <string name="logout">注销登录</string>
    <string name="about">关于 Health-MVP</string>
    <string name="request_post_cannot_be_null">帖子没有内容</string>
    <string name="post_detail">帖子详情</string>
    <string name="blank_fix_criterion">未佩戴</string>
    <string name="fix_criterion_info">定标的目的是为了校准设备，请调整您的设备松紧度，然后点击相应的定标选项。</string>
    <string name="loose_fix_criterion">已佩戴，调节松紧度为：松</string>
    <string name="fixed">已定标</string>
    <string name="unfixed">还未定标</string>
    <string name="comfort_fix_criterion">已佩戴，调节松紧度为：合适</string>
    <string name="tight_fix_criterion">佩戴，调节松紧度为：紧</string>
    <string name="skip">跳过，以后再进行定标</string>
    <string name="bluetooth_status">蓝牙状态</string>
    <string name="sync">同步</string>
    <string name="upload_data">数据上传</string>
    <string name="connect_failed">无法连接到 %1$s</string>
    <string name="connect_success">已连接到 %1$s</string>
    <string name="bluetooth_disconnected">蓝牙设备断开连接</string>
    <string name="verifing">设备已连接，认证中…</string>
    <string name="no_fix_type_selected">请先选择定标类型</string>
    <string name="undefine">未设置</string>
    <string name="female">女</string>
    <string name="male">男</string>
    <string name="load_userinfo_failed">用户信息获取失败</string>
    <string name="old_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_new_password">确认新密码</string>
    <string name="username">用户名</string>
    <string name="change_name">修改用户名</string>
    <string name="cancel">取消</string>
    <string name="change">修改</string>
    <string name="profile_changed">资料已修改</string>
    <string name="profile_unchanged">资料未修改</string>
    <string name="change_phone">修改登录手机号</string>
    <string name="change_email">修改邮箱</string>
    <string name="change_age">修改年龄</string>
    <string name="change_gender">修改性别</string>
    <string name="write_something">写点什么…</string>
    <string name="post">发布</string>
    <string name="post_title">帖子标题</string>
    <string name="add_post">发布帖子</string>
    <string name="add_post_error">帖子发布失败</string>
    <string name="post_title_or_content_empty">帖子标题和内容不能为空</string>
    <string name="logout_confirm">注销后需要重新登录，您确定吗？</string>
    <string name="ok">确定</string>
    <string name="add_comment">发布评论</string>
    <string name="add_comment_error">评论失败</string>
    <string name="comment_content_empty">评论内容不能为空</string>
    <string name="channel_number_unchanged">显示通道数量未改变</string>
    <string name="channel_number_error">设置通道数量最小为1，最大为4</string>
    <string name="set_channel_name">通道命名</string>
    <string name="network_setting">仅使用无线网络上传/下载数据</string>
    <string name="channel_name_unchanged">通道未命名</string>
    <string name="channel_name_toolong">通道命名最多两个字符</string>
    <string name="patient_detail">患者详情</string>
    <string name="base_info">%1$s | %2$s | %3$s</string>
    <string name="send_msg">发送消息</string>
    <string name="message_empty">信息为空，未发送</string>
    <string name="close">关闭</string>
    <string name="about_content">Health-Version1.0</string>
    <string name="no_data">暂无数据</string>
    <string name="choose_date">选择日期</string>
    <string name="comfort_statistic">舒适度统计</string>
    <string name="only_wifi">设置已保存，仅使用无线网络上传/下载数据</string>
    <string name="use_cell">设置已保存，使用无线网络/移动数据网络上传/下载数据</string>
    <string name="blank">空载</string>
    <string name="loose">佩戴松</string>
    <string name="comfort">佩戴松紧合适</string>
    <string name="tight">佩戴紧</string>
    <string name="comfort_range_help">舒适度范围</string>
    <string name="bind_patients_list">您负责的患者列表</string>
    <string name="select_all">全选</string>
    <string name="choose_receiver">选择收件人</string>
    <string name="change_device">更换设备</string>
    <string name="change_device_confirm">断开当前设备连接，然后重新搜索并连接一个新的设备。现在立即更换设备？</string>
    <string name="request_history_data">请求历史数据</string>
    <string name="fix_blank">空载定标</string>
    <string name="fix_loose">松定标</string>
    <string name="fix_comfort">合适定标</string>
    <string name="fix_tight">紧定标</string>
</resources>
